private_key_generator/tests/compile_fails/timestamp_imprecision_too_large.stderr
error[E0080]: evaluation of `<private_key_generator_docs::BinaryId<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, 3, 32, 56, 28> as private_key_generator_docs::EncodedId>::TIMESTAMP_PRECISION_REDUCTION` failed
 --> src/id.rs
  |
  | ...=> [/* Any value over 28 for the TIMESTAMP_PRECISION_REDUCTION parameter will make your timestamp dates off by over 8 years... */][ TIMESTAMP_PRECISION_REDUCTION as usize ]
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ index out of bounds: the length is 0 but the index is 28

note: the above error was encountered while instantiating `fn <private_key_generator_docs::BinaryId<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UInt<private_key_generator_docs::typenum::UTerm, private_key_generator_docs::typenum::B1>, private_key_generator_docs::typenum::B0>, private_key_generator_docs::typenum::B1>, 3, 32, 56, 28> as private_key_generator_docs::EncodedId>::generate`
   --> src/key_generator.rs
    |
    |         let (mut id, trimmed_timestamp) = Id::generate(prefix, expiration, associated_data.is_some(), self.current_version_epoch, rng);
    |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
